crates/keron-lang/tests/corpus/errors/check/for_loop_var_shadows_outer.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `x` is already defined as a outer `val` in this scope
  --> 5:5
  |
5 | for x in xs {
  |     ^
